--- a/index.html
+++ b/index.html
@@ -1,132 +1,155 @@
-<script>
-(function(){
-  const USERS = [
-    {id:'mehmet', name:'Mehmet'},
-    {id:'batu', name:'Batu'},
-    {id:'abdü', name:'Abdü'},
-    {id:'kemal', name:'Kemal'}
-  ];
+<!doctype html>
+<html lang="tr">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Rezil Sayacı</title>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-gradient-to-br from-red-100 via-pink-100 to-purple-200 min-h-screen text-gray-800">
+  <div class="max-w-4xl mx-auto p-4">
+    <h1 class="text-4xl font-bold text-center mb-6 bg-gradient-to-r from-pink-500 to-red-500 text-white py-3 rounded-2xl shadow-lg">
+      Rezil Sayacı
+    </h1>
 
-  const dateInput = document.getElementById('datePicker');
-  const todayISO = ()=> new Date().toISOString().slice(0,10);
-  dateInput.value = todayISO();
+    <!-- Liderlik Tablosu -->
+    <div class="bg-white rounded-2xl shadow-lg p-5 mb-6">
+      <h2 class="text-2xl font-semibold mb-3 text-center text-pink-600">🏆 En Reziller 🏆</h2>
+      <ul id="liderlikListesi" class="space-y-2 text-lg font-medium text-gray-700 text-center"></ul>
+    </div>
 
-  let DATA = null;
+    <!-- Rezillik Ekle -->
+    <div class="bg-white rounded-2xl shadow-lg p-5 mb-6">
+      <h2 class="text-xl font-semibold mb-3">Yeni Rezillik Ekle</h2>
+      <form id="rezilForm" class="space-y-3">
+        <select id="kisi" required class="w-full p-3 border rounded-lg">
+          <option value="">Lavuk Seç</option>
+          <option value="Mehmet">Mehmet</option>
+          <option value="Batu">Batu</option>
+          <option value="Abdü">Abdü</option>
+          <option value="Kemal">Kemal</option>
+        </select>
+        <textarea id="aciklama" placeholder="napmış yine amk malı nfwınwnıfvwfk" required class="w-full p-3 border rounded-lg" rows="3"></textarea>
+        <input id="tarih" type="date" required class="w-full p-3 border rounded-lg"/>
+        <button class="w-full py-3 bg-gradient-to-r from-pink-600 to-red-600 text-white rounded-lg hover:from-pink-700 hover:to-red-700">
+          Ekle
+        </button>
+      </form>
+      <button id="tumunuSil" class="mt-4 w-full py-2 bg-red-500 text-white rounded-lg hover:bg-red-600">Tümünü Sil 🧹</button>
+    </div>
 
-  // Backend’den veriyi çek
-  async function load(){
-    try{
-      const res = await fetch('/api/data');
-      DATA = await res.json();
-      if(!DATA.users) DATA = initEmpty();
-    }catch(e){DATA = initEmpty();}
-    render();
-  }
+    <!-- Rezillik Listeleri -->
+    <div class="space-y-6">
+      <div class="bg-white rounded-2xl shadow-lg p-5">
+        <h2 class="text-xl font-semibold mb-3 text-pink-600">Mehmet'in Rezillikleri</h2>
+        <ul id="liste-Mehmet" class="space-y-2"></ul>
+      </div>
+      <div class="bg-white rounded-2xl shadow-lg p-5">
+        <h2 class="text-xl font-semibold mb-3 text-pink-600">Batu'nun Rezillikleri</h2>
+        <ul id="liste-Batu" class="space-y-2"></ul>
+      </div>
+      <div class="bg-white rounded-2xl shadow-lg p-5">
+        <h2 class="text-xl font-semibold mb-3 text-pink-600">Abdü'nün Rezillikleri</h2>
+        <ul id="liste-Abdü" class="space-y-2"></ul>
+      </div>
+      <div class="bg-white rounded-2xl shadow-lg p-5">
+        <h2 class="text-xl font-semibold mb-3 text-pink-600">Kemal'in Rezillikleri</h2>
+        <ul id="liste-Kemal" class="space-y-2"></ul>
+      </div>
+    </div>
+  </div>
 
-  function initEmpty(){
-    const obj = {users:{}};
-    for(const u of USERS) obj.users[u.id] = {name:u.name,total:0,byDate:{}};
-    return obj;
-  }
+  <!-- Firebase -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
+    import { getDatabase, ref, push, get, child, remove } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-database.js";
 
-  // Backend’e güncelleme gönder
-  async function save(){
-    await fetch('/api/update', {
-      method:'POST',
-      headers:{'Content-Type':'application/json'},
-      body: JSON.stringify(DATA)
+    // --- Firebase Config ---
+    const firebaseConfig = {
+      apiKey: "AIzaSyCmwFZJM8dD_WPXdkabpHAYzi-MxlCGtRY",
+      authDomain: "rezilsayaci.firebaseapp.com",
+      databaseURL: "https://rezilsayaci-default-rtdb.firebaseio.com",
+      projectId: "rezilsayaci",
+      storageBucket: "rezilsayaci.firebasestorage.app",
+      messagingSenderId: "1038280644933",
+      appId: "1:1038280644933:web:d22de5e9f028d84817c62c",
+      measurementId: "G-JL1YHGTPZN"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    // --- Rezillik Ekle ---
+    document.getElementById('rezilForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const kisi = document.getElementById('kisi').value;
+      const aciklama = document.getElementById('aciklama').value.trim();
+      const tarih = document.getElementById('tarih').value;
+
+      if (!kisi || !aciklama || !tarih) return;
+
+      await push(ref(db, 'rezillikler'), { kisi, aciklama, tarih });
+      document.getElementById('rezilForm').reset();
+      loadData();
     });
-  }
 
-  async function increment(userId){
-    const day = dateInput.value || todayISO();
-    const user = DATA.users[userId];
-    user.byDate[day] = (user.byDate[day]||0) + 1;
-    user.total = Object.values(user.byDate).reduce((a,b)=>a+b,0);
-    await save();
-    render();
-  }
+    // --- Verileri Yükle ---
+    async function loadData() {
+      const snapshot = await get(child(ref(db), 'rezillikler'));
+      const veriler = snapshot.exists() ? snapshot.val() : {};
 
-  async function resetAll(){
-    if(!confirm('Tüm istatistikleri sıfırlamak istediğine emin misin?')) return;
-    DATA = initEmpty();
-    await save();
-    render();
-  }
+      // Kişi listelerini temizle
+      ['Mehmet','Batu','Abdü','Kemal'].forEach(kisi => {
+        document.getElementById(`liste-${kisi}`).innerHTML = '';
+      });
 
-  function render(){
-    renderCards(); renderLeaderboard(); renderDayBoard(); renderLogs();
-  }
+      // Sayı saymak için
+      const sayac = { Mehmet: 0, Batu: 0, Abdü: 0, Kemal: 0 };
 
-  function renderCards(){
-    const wrap=document.getElementById('cards'); wrap.innerHTML='';
-    for(const u of USERS){
-      const user=DATA.users[u.id];
-      const card=document.createElement('div');card.className='card';
-      card.innerHTML=`
-        <div class="user-name">${user.name}</div>
-        <div class="count">${user.total}</div>
-        <div class="small">Toplam rezillik</div>
-        <div class="user-actions">
-          <button class="big-btn rezil" data-id="${u.id}">REZİL!</button>
-          <button class="big-btn view" data-id="${u.id}">Ayrıntılar</button>
-        </div>`;
-      wrap.appendChild(card);
+      // Verileri sırala (en yeni üstte)
+      const entries = Object.entries(veriler).sort((a,b) => b[1].tarih.localeCompare(a[1].tarih));
+
+      entries.forEach(([key, item]) => {
+        const li = document.createElement('li');
+        li.className = "p-3 bg-pink-50 rounded-lg flex justify-between items-start shadow";
+
+        li.innerHTML = `
+          <div>
+            <div class="font-semibold">${item.aciklama}</div>
+            <div class="text-sm text-gray-500">${item.tarih}</div>
+          </div>
+          <button class="text-red-500 hover:text-red-700 font-bold">X</button>
+        `;
+
+        li.querySelector('button').addEventListener('click', async () => {
+          await remove(ref(db, `rezillikler/${key}`));
+          loadData();
+        });
+
+        document.getElementById(`liste-${item.kisi}`).appendChild(li);
+        sayac[item.kisi]++;
+      });
+
+      // Liderlik tablosu
+      const sirali = Object.entries(sayac).sort((a,b)=>b[1]-a[1]);
+      const liderlikUl = document.getElementById('liderlikListesi');
+      liderlikUl.innerHTML = '';
+      sirali.forEach(([kisi, sayi])=>{
+        const li = document.createElement('li');
+        li.textContent = `${kisi}: ${sayi} rezillik 😎`;
+        liderlikUl.appendChild(li);
+      });
     }
-    wrap.querySelectorAll('.big-btn.rezil').forEach(btn=>btn.addEventListener('click',e=>increment(e.currentTarget.dataset.id)));
-    wrap.querySelectorAll('.big-btn.view').forEach(btn=>btn.addEventListener('click', e=>{
-      const id=e.currentTarget.dataset.id;const el=document.getElementById('user-'+id);
-      if(el){el.open=!el.open;el.scrollIntoView({behavior:'smooth',block:'center'});}
-    }));
-  }
 
-  function renderLeaderboard(){
-    const lb=document.getElementById('leaderboard'); lb.innerHTML='';
-    const arr=Object.entries(DATA.users).map(([id,u])=>({id,name:u.name,total:u.total}));
-    arr.sort((a,b)=>b.total-a.total);
-    for(const r of arr){
-      const row=document.createElement('div'); row.className='leader-row';
-      row.innerHTML=`<div>${r.name}</div><div style="font-weight:800">${r.total}</div>`; lb.appendChild(row);
-    }
-  }
+    // --- Tümünü Sil ---
+    document.getElementById('tumunuSil').addEventListener('click', async () => {
+      if (!confirm('Tüm rezillikler silinsin mi?')) return;
+      await remove(ref(db, 'rezillikler'));
+      loadData();
+    });
 
-  function renderDayBoard(){
-    const selDay=dateInput.value||todayISO();
-    const el=document.getElementById('dayBoard'); el.innerHTML='';
-    const arr=Object.entries(DATA.users).map(([id,u])=>({id,name:u.name,dayCount:(u.byDate[selDay]||0)}));
-    arr.sort((a,b)=>b.dayCount-a.dayCount);
-    for(const r of arr){
-      const row=document.createElement('div'); row.className='leader-row';
-      row.innerHTML=`<div>${r.name}</div><div style="font-weight:800">${r.dayCount}</div>`; el.appendChild(row);
-    }
-  }
-
-  function renderLogs(){
-    const wrap=document.getElementById('logs'); wrap.innerHTML='';
-    for(const u of USERS){
-      const user=DATA.users[u.id];
-      const det=document.createElement('details'); det.id='user-'+u.id; det.style.marginBottom='10px';
-      const summary=document.createElement('summary'); summary.innerHTML=`<strong>${user.name}</strong> — Toplam: ${user.total}`; det.appendChild(summary);
-      const tbl=document.createElement('table'); const thead=document.createElement('thead'); thead.innerHTML='<tr><th>Tarih</th><th>Adet</th></tr>'; tbl.appendChild(thead);
-      const tbody=document.createElement('tbody');
-      const dates=Object.entries(user.byDate).sort((a,b)=>b[0].localeCompare(a[0]));
-      if(dates.length===0){const tr=document.createElement('tr');tr.innerHTML='<td colspan="2" class="small-muted">Kayıt yok</td>';tbody.appendChild(tr);}else{
-        for(const [date,count] of dates){const tr=document.createElement('tr');tr.innerHTML=`<td>${date}</td><td style="font-weight:800">${count}</td>`;tbody.appendChild(tr);}
-      }
-      tbl.appendChild(tbody);
-      const foot=document.createElement('div'); foot.style.marginTop='8px'; foot.style.display='flex'; foot.style.gap='8px';
-      const addBtn=document.createElement('button'); addBtn.className='btn'; addBtn.textContent='Bugüne +1'; addBtn.addEventListener('click',()=>{dateInput.value=todayISO();increment(u.id); det.open=true;});
-      const removeDayBtn=document.createElement('button'); removeDayBtn.className='btn ghost'; removeDayBtn.textContent='Bu Kullanıcıyı Sıfırla'; removeDayBtn.addEventListener('click',()=>{if(!confirm(`${user.name} tüm kayıtlarını silmek istediğine emin misin?`)) return; DATA.users[u.id].byDate={}; DATA.users[u.id].total=0; save(); render();});
-      foot.appendChild(addBtn); foot.appendChild(removeDayBtn);
-      det.appendChild(tbl); det.appendChild(foot);
-      wrap.appendChild(det);
-    }
-  }
-
-  document.getElementById('resetBtn').addEventListener('click', resetAll);
-  document.getElementById('exportBtn').addEventListener('click', ()=>{const blob=new Blob([JSON.stringify(DATA,null,2)],{type:'application/json'}); const url=URL.createObjectURL(blob); const a=document.createElement('a'); a.href=url; a.download='rezil-sayaci-'+todayISO()+'.json'; a.click(); URL.revokeObjectURL(url);});
-  dateInput.addEventListener('change', render);
-
-  load();
-})();
-</script>
+    // İlk yükleme
+    loadData();
+  </script>
+</body>
+</html>
